CCE-625 : dropdown men width fix on mobile

--- a/src/less/techne-patterns/_multi-tab-editor.less
+++ b/src/less/techne-patterns/_multi-tab-editor.less
@@ -570,6 +570,7 @@
         padding:0;
         cursor: pointer;
         border: none;
+        min-width: 200px;
 
         li{
             border-right: 1px solid @default-grey-700;
